--- a/my-vue-app/index.html
+++ b/my-vue-app/index.html
@@ -12,6 +12,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Paytone+One&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="favorites.html">
         <link rel="stylesheet" href="./main.css">
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>Uzum Market - интернет-магазин</title>
         <style>
             #search-input {
@@ -294,6 +296,10 @@
                 padding: 10px 20px;
                 border: none;
                 cursor: pointer;
+            }
+
+            .checked {
+                color: orange;
             }
 
             @import 'tailwindcss/base';
