--- a/my-vue-app/index.html
+++ b/my-vue-app/index.html
@@ -347,25 +347,29 @@
                 <button class="w-32 h-10 bg-violet-100 ml-6 rounded text-violet-600">
                     <span class="icon-[ant-design--shopping-outlined]"></span> Katalog
                 </button>
-                <div id="search" class="mt-3 ml-3">
-                    <div class="search rounded relative mb-4 flex w-full flex-wrap items-stretch">
-                        <input id="search-input" type="search"
-                            class="relative m-0 -mr-0.5 block min-w-0 flex-auto rounded-l, bg-transparent bg-clip-padding px-3 py-[0.25rem] text-base font-normal leading-[1.6] text-neutral-700 outline-none transition duration-200 ease-in-out"
-                            placeholder="Mahsulotlar va turkumlar izlash" aria-label="Search"
-                            aria-describedby="button-addon1" />
-                        <!--Search button-->
-                        <button
-                            class=" flex items-center rounded-r bg-zinc-200  border border-solid border-neutral-300  px-6 py-2.5 text-xs font-medium uppercase leading-tight transition duration-150 ease-in-out hover:bg-primary-700 focus:bg-primary-700 focus:outline-none focus:ring-0 active:bg-primary-800"
-                            type="button" id="button-addon1" data-te-ripple-init data-te-ripple-color="light">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
-                                class="h-5 w-5 text-gray-600">
-                                <path fill-rule="evenodd"
-                                    d="M9 3.5a5.5 5.5 0 100 11 5.5 5.5 0 000-11zM2 9a7 7 0 1112.452 4.391l3.328 3.329a.75.75 0 11-1.06 1.06l-3.329-3.328A7 7 0 012 9z"
-                                    clip-rule="evenodd" />
-                            </svg>
-                        </button>
+                <div class="max-w-lg mx-auto">
+                    <div id="search" class="mt-3 ml-3">
+                        <div class="search rounded relative mb-4 flex w-full flex-wrap items-stretch">
+                            <input id="searchInput" type="search"
+                                class="relative m-0 -mr-0.5 block min-w-0 flex-auto rounded-l, w-96 bg-transparent bg-clip-padding px-3 py-[0.25rem] text-base font-normal leading-[1.6] text-neutral-700 outline-none transition duration-200 ease-in-out"
+                                placeholder="Mahsulotlar va turkumlar izlash" aria-label="Search"
+                                aria-describedby="button-addon1" />
+                            <div id="searchResults" class="gap-4 z-40"></div>
+                            <!--Search button-->
+                            <button
+                                class=" flex items-center rounded-r bg-zinc-200  border border-solid border-neutral-300  px-6 py-2.5 text-xs font-medium uppercase leading-tight transition duration-150 ease-in-out hover:bg-primary-700 focus:bg-primary-700 focus:outline-none focus:ring-0 active:bg-primary-800"
+                                type="button" id="button-addon1" data-te-ripple-init data-te-ripple-color="light">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
+                                    class="h-5 w-5 text-gray-600">
+                                    <path fill-rule="evenodd"
+                                        d="M9 3.5a5.5 5.5 0 100 11 5.5 5.5 0 000-11zM2 9a7 7 0 1112.452 4.391l3.328 3.329a.75.75 0 11-1.06 1.06l-3.329-3.328A7 7 0 012 9z"
+                                        clip-rule="evenodd" />
+                                </svg>
+                            </button>
+                        </div>
                     </div>
                 </div>
+
                 <div id="buttons" class="ml-3 max-w-screen-xl flex flex-wrap items-center justify-between mx-auto">
                     <!-- Button to Open Modal -->
                     <button class="ml-5 rounded text-gray-800 flex" id="openModalButton">
@@ -426,7 +430,7 @@
             </div>
         </header>
         <main>
-            <swiper-container class="mySwiper" pagination="true" navigation="true" space-between="30"
+            <swiper-container class="mySwiper -z-20" pagination="true" navigation="true" space-between="30"
                 centered-slides="true" autoplay-delay="2500" autoplay-disable-on-interaction="false">
                 <swiper-slide>
                     <img src="https://images.uzum.uz/cmrkr2125ku8ad8j53g0/main_page_banner.jpg" alt="">
@@ -451,11 +455,22 @@
                 </div>
             </swiper-container>
 
-
             <div class="container max-w-screen-xl mx-auto py-12">
                 <h1 class="text-3xl font-semibold mb-4">Tavsiyalar </h1>
                 <div class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-5 gap-8">
                 </div>
+
+                <!-- Search Product -->
+                <div class="max-w-lg mx-auto">
+                    <h1>Product Search</h1>
+                    <input id="searchInput" type="search"
+                        class="relative m-0 -mr-0.5 block min-w-0 flex-auto rounded-l, bg-transparent bg-clip-padding px-3 py-[0.25rem] text-base font-normal leading-[1.6] text-neutral-700 outline-none transition duration-200 ease-in-out"
+                        placeholder="Mahsulotlar va turkumlar izlash" aria-label="Search"
+                        aria-describedby="button-addon1" />
+                    <div id="searchResults" class="grid grid-cols-1 gap-4"></div>
+                </div>
+
+
                 <div class="pt-10">
                     <button class="bg-gray-200" id="btn-1">Yana ko'rsatish 20</button>
                 </div>
